Modified static text.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</div>
 	</header>
 	<div class="container intro">
-		<p>Kids love to see how they're doing and how they compare to each other. Select a name from the drop down
+		<p>Kids love to see how they're doing and how they compare to each other. Select a name and/or an opponent from the drop down
 			menus or click on an area of a graph and see how their stats refocus.</p>
 	</div>
 	<div class="container">
@@ -129,7 +129,7 @@
 						<h5><em>(Chart 5)</em></h5>
 						<h5> Total Assists Per Person</h5>
 						<div id="assists-per-person-piechart">
-							<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
+							<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
 							<a class="reset" href="javascript:assistsPerPersonPieChart.filterAll();dc.redrawAll();"
 								style="display: none;">reset</a>
 							<div class="clearfix"></div>
@@ -139,7 +139,7 @@
 						<h5><em>(Chart 5)</em></h5>
 						<h5> Total Goals Per Person</h5>
 						<div id="goals-per-person-piechart">
-							<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
+							<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
 							<a class="reset" href="javascript:goalssPerPersonPieChart.filterAll();dc.redrawAll();"
 								style="display: none;">reset</a>
 							<div class="clearfix"></div>
