Made select menu's equal width.

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             .transitionDuration(1000)
             .x(d3.scaleBand())
             .xUnits(dc.units.ordinal)
-            .ordinalColors(['blue', 'white'])
+            .ordinalColors(['#3b89cf', 'white'])
             .legend(dc.legend().x(0).y(10).itemHeight(15).gap(5))
 
 
@@ -400,7 +400,7 @@ const date_dim = ndx.dimension(dc.pluck('date'));//Create date dimension
             .transitionDuration(1000)
             .x(d3.scaleBand())
             .xUnits(dc.units.ordinal)
-            .ordinalColors(['blue', 'white'])
+            .ordinalColors(['#3b89cf', 'white'])
             .legend(dc.legend().x(0).y(10).itemHeight(15).gap(5))
         //.yAxis().ticks(4);
 
@@ -422,7 +422,7 @@ const date_dim = ndx.dimension(dc.pluck('date'));//Create date dimension
             .transitionDuration(1000)
             .x(d3.scaleBand())
             .xUnits(dc.units.ordinal)
-            .ordinalColors(['blue', 'white'])
+            .ordinalColors(['#3b89cf', 'white'])
             .legend(dc.legend().x(0).y(10).itemHeight(15).gap(5))
         //.yAxis().ticks(4);
 
