Added padding to chart paragraphs.

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col text-center">
-            <p>Select a player name</p>
+            <p><b>Select a player name</b></p>
 				<div id="select1"></div>
 			</div>
 			<div class="col text-center">
-            <p>Select an opponent</p>
+            <p><b>Select an opponent</b></p>
 				<div id="select2"></div>
 			</div>
 		</div>
