--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
 		</div>
 	</header>
 	<div class="container intro">
-		<p>Kids love to see how they're doing and how they compare to each other. Select a name and/or an opponent from the drop down
+		<p>Kids love to see how they're doing and how they compare to each other. Select a name and/or an opponent from
+			the drop down
 			menus or click on an area of a graph and see how their stats refocus.</p>
 	</div>
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col text-center">
-            <p><b>Select a player name</b></p>
+				<p><b>Select a player name</b></p>
 				<div id="select1"></div>
 			</div>
 			<div class="col text-center">
-            <p><b>Select an opponent</b></p>
+				<p><b>Select an opponent</b></p>
 				<div id="select2"></div>
 			</div>
 		</div>
@@ -128,21 +129,25 @@
 					<div class="col-6">
 						<h5><em>(Chart 5)</em></h5>
 						<h5> Total Assists Per Person</h5>
-						<div id="assists-per-person-piechart">
-							<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
-							<a class="reset" href="javascript:assistsPerPersonPieChart.filterAll();dc.redrawAll();"
-								style="display: none;">reset</a>
-							<div class="clearfix"></div>
+						<div style="width:100%">
+							<div id="assists-per-person-piechart">
+								<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
+								<a class="reset" href="javascript:assistsPerPersonPieChart.filterAll();dc.redrawAll();"
+									style="display: none;">reset</a>
+								<div class="clearfix"></div>
+							</div>
 						</div>
 					</div>
 					<div class="col-6">
 						<h5><em>(Chart 5)</em></h5>
 						<h5> Total Goals Per Person</h5>
-						<div id="goals-per-person-piechart">
-							<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
-							<a class="reset" href="javascript:goalssPerPersonPieChart.filterAll();dc.redrawAll();"
-								style="display: none;">reset</a>
-							<div class="clearfix"></div>
+						<div style="width:100%">
+							<div id="goals-per-person-piechart">
+								<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
+								<a class="reset" href="javascript:goalssPerPersonPieChart.filterAll();dc.redrawAll();"
+									style="display: none;">reset</a>
+								<div class="clearfix"></div>
+							</div>
 						</div>
 					</div>
 					<p>These charts show the number of goals scored and assists made for each player.</p>
@@ -154,21 +159,26 @@
 					<div class="col-6">
 						<h5><em>(Chart 6)</em></h5>
 						<h5> Total Assists Per Opponent</h5>
-						<div id="assists-per-opponent-piechart">
-							<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
-							<a class="reset" href="javascript:assistsPerOpponentPieChart.filterAll();dc.redrawAll();"
-								style="display: none;">reset</a>
-							<div class="clearfix"></div>
+						<div style="width:100%">
+							<div id="assists-per-opponent-piechart">
+								<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
+								<a class="reset"
+									href="javascript:assistsPerOpponentPieChart.filterAll();dc.redrawAll();"
+									style="display: none;">reset</a>
+								<div class="clearfix"></div>
+							</div>
 						</div>
 					</div>
 					<div class="col-6">
 						<h5><em>(Chart 6)</em></h5>
 						<h5> Total Goals Per Opponent</h5>
-						<div id="goals-per-opponent-piechart">
-							<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
-							<a class="reset" href="javascript:goalsPerOpponentPieChart.filterAll();dc.redrawAll();"
-								style="display: none;">reset</a>
-							<div class="clearfix"></div>
+						<div style="width:100%">
+							<div id="goals-per-opponent-piechart">
+								<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
+								<a class="reset" href="javascript:goalsPerOpponentPieChart.filterAll();dc.redrawAll();"
+									style="display: none;">reset</a>
+								<div class="clearfix"></div>
+							</div>
 						</div>
 					</div>
 					<p>These charts show the number of goals scored and assists made against the various opponents
@@ -216,7 +226,7 @@
     const visTable = dc.dataTable(".dc-data-table");
     //Get data
     d3.json('data/stats.json').then(function (data) {
-        console.log(data);
+        //console.log(data);
 
         //Parse the date
         const dateFormatSpecifier = '%d/%m/%Y';
@@ -402,7 +412,7 @@ const date_dim = ndx.dimension(dc.pluck('date'));//Create date dimension
             .xUnits(dc.units.ordinal)
             .ordinalColors(['#3b89cf', 'white'])
             .legend(dc.legend().x(0).y(10).itemHeight(15).gap(5))
-        //.yAxis().ticks(4);
+            //.yAxis().ticks(4);
 
 
         //Create opponent dimension for chart 4
@@ -433,22 +443,24 @@ const date_dim = ndx.dimension(dc.pluck('date'));//Create date dimension
         const total_goals_per_person5 = name_dim5.group().reduceSum(dc.pluck('goals'));
 
         assistsPerPersonPieChart
-            .radius(80)
+            .width($(assistsPerPersonPieChart.anchor()).parent().width())
+            //.margins({ top: 30, right: 50, bottom: 30, left: 70 })
+            //.radius(80)
             .dimension(name_dim5)
             .group(total_assists_per_person5)
             .transitionDuration(1000)
-            .externalLabels(17)
-            //.externalRadiusPadding(5)
+            .externalLabels(10)
+            .externalRadiusPadding(17)
 
         //Pie chart 5
         goalsPerPersonPieChart
-            //.width(150)
-            //.height(150)
-            .radius(80)
+            .width($(goalsPerPersonPieChart.anchor()).parent().width())
+            //.radius(80)
             .dimension(name_dim5)
             .group(total_goals_per_person5)
             .transitionDuration(1000)
-            .externalLabels(17)
+            .externalLabels(10)
+            .externalRadiusPadding(17)
             
 
         //Create opponent dimension for chart 6
@@ -458,19 +470,23 @@ const date_dim = ndx.dimension(dc.pluck('date'));//Create date dimension
 
 
         assistsPerOpponentPieChart
-            .radius(80)
+            .width($(assistsPerOpponentPieChart.anchor()).parent().width())
+            //.radius(80)
             .transitionDuration(1000)
             .dimension(opponent_dim6)
             .group(total_assists_per_opponent6)
             .externalLabels(17)
+            .externalRadiusPadding(17)
 
         //Pie chart 6
-        goalsPerOpponentPieChart         
-            .radius(80)
+        goalsPerOpponentPieChart  
+            .width($(goalsPerOpponentPieChart.anchor()).parent().width())       
+            //.radius(80)
             .transitionDuration(1000)
             .dimension(opponent_dim6)
             .group(total_goals_per_opponent6)
             .externalLabels(17)
+            .externalRadiusPadding(17)
 
 
         visCount
