--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 				<p><b>Select a player name</b></p>
 				<div id="select1"></div>
 			</div>
+            <div class="col text-center">
+					<div class="dc-data-count">
+						<span class="filter-count"></span> selected out of <span class="total-count"></span>
+						records
+						|
+						<a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+					</div>
+				</div>
 			<div class="col text-center">
 				<p><b>Select an opponent</b></p>
 				<div id="select2"></div>
@@ -191,14 +199,7 @@
 		<div class="row">
 			<div class="col-12">
 				<!--Chart Table-->
-				<div>
-					<div class="dc-data-count">
-						<span class="filter-count"></span> selected out of <span class="total-count"></span>
-						records
-						|
-						<a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
-					</div>
-				</div>
+				
 				<table class="table table-hover dc-data-table">
 				</table>
 			</div>
