--- a/index.html
+++ b/index.html
@@ -56,22 +56,23 @@
 			menus or click on an area of a graph and see how their stats refocus.</p>
 	</div>
 	<div class="container">
-		<div class="row justify-content-center">
+		<div class="row justify-content-center align-items-end">
 			<div class="col text-center">
 				<p><b>Select a player name</b></p>
 				<div id="select1"></div>
 			</div>
-            <div class="col text-center">
-					<div class="dc-data-count">
-						<span class="filter-count"></span> selected out of <span class="total-count"></span>
-						records
-						|
-						<a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
-					</div>
-				</div>
+            
 			<div class="col text-center">
 				<p><b>Select an opponent</b></p>
 				<div id="select2"></div>
+			</div>
+            <div class="col text-center">
+				<div class="dc-data-count">
+				<span class="filter-count"></span> selected out of <span class="total-count"></span>
+						records
+						|
+				<a class="main-reset" href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+				</div>
 			</div>
 		</div>
 	</div>
