--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<div id="attendance-chart">
 						<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
 						<a class="reset" href="javascript:attendanceStackedBarChart.filterAll();dc.redrawAll();"
-							style="display: none;">reset</a>
+							style="display: none;">Reset</a>
 						<div class="clearfix"></div>
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 					<div id="goals-per-person-chart">
 						<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
 						<a class="reset" href="javascript:personGoalsAssistsBarChart.filterAll();dc.redrawAll();"
-							style="display: none;">reset</a>
+							style="display: none;">Reset</a>
 						<div class="clearfix"></div>
 					</div>
 				</div>
@@ -122,7 +122,7 @@
 					<div id="goals-per-opponent-chart">
 						<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
 						<a class="reset" href="javascript:opponentGoalsAssistsBarChart.filterAll();dc.redrawAll();"
-							style="display: none;">reset</a>
+							style="display: none;">Reset</a>
 						<div class="clearfix"></div>
 					</div>
 				</div>
@@ -142,7 +142,7 @@
 							<div id="assists-per-person-piechart">
 								<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
 								<a class="reset" href="javascript:assistsPerPersonPieChart.filterAll();dc.redrawAll();"
-									style="display: none;">reset</a>
+									style="display: none;">Reset</a>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 							<div id="goals-per-person-piechart">
 								<span class="reset" style="display: none;"><strong>Player(s) selected: </strong><span class="filter"></span></span>
 								<a class="reset" href="javascript:goalssPerPersonPieChart.filterAll();dc.redrawAll();"
-									style="display: none;">reset</a>
+									style="display: none;">Reset</a>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -173,7 +173,7 @@
 								<span class="reset" style="display: none;"><strong>Opponent(s) selected: </strong><span class="filter"></span></span>
 								<a class="reset"
 									href="javascript:assistsPerOpponentPieChart.filterAll();dc.redrawAll();"
-									style="display: none;">reset</a>
+									style="display: none;">Reset</a>
 								<div class="clearfix"></div>
 							</div>
 						</div>
