Added favicon to site.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	<!--<script type="text/javascript" src="js/main.js"></script>-->
 	<!--My css link-------------->
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
