Pre-submission final commit

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<header class="container-fluid">
 		<div class="row">
 			<div class="col-12 text-center heading">
-				<h1><img src="images/EskerCrest.JPG">ESKER <span>CELTIC</span> U13's</h1>
+				<h1><img src="images/EskerCrest.JPG" alt="Esker Celtic FC Crest">ESKER <span>CELTIC</span> U13's</h1>
 			</div>
 		</div>
 	</header>
@@ -210,7 +210,7 @@
 					<!--Chart Table-->
 					<table class="table table-hover dc-data-table"></table>
 					<hr>
-					<p class="disclaimer"><em>(For demonstration purposes only)<em></p>
+					<p class="disclaimer"><em>(For demonstration purposes only)</em></p>
 				</div>
 			</div>
 		</div>
